# bookish

./: AGENT.md  AGENTS.md  Agentic_Workflow.md  Architecture.md  BUILD_AGENTS.md  LEARNING.md  PLAN_v1.md  PRODUCT.md  PROJECT_LEARNING.md  README.md  REFACTOR.md  TEST.md  index.html  skills-lock.json
server/: .gitignore  Agents.md  PERFORMANCE_OPTIMIZATION.md  QUICK_START.md  README.md  config.py  langgraph.json  main.py  midnight_shift.md  pyproject.toml
server/agents/: hitl_state.py  orchestration_graph.py  orchestration_state.py  orchestrator.py  utils.py
server/agents/nodes/: __init__.py  editor_node.py  fact_checker_node.py  humanizer_node.py  planner_node.py  researcher_node.py  world_builder_node.py  writer_node.py
server/app/: __init__.py  config.py  main.py
server/app/agent/: __init__.py  agent.py
server/app/agents/: __init__.py  hitl.py  orchestration_graph.py  orchestration_state.py  orchestrator.py  runtime.py  streaming.py
server/app/api/: agent.py  api.py  deps.py  projects.py  router.py  settings.py  users.py  webhooks.py
server/app/core/: __init__.py  exceptions.py  model_config.py  parsing.py  streaming.py  telemetry.py
server/chroma_db/: chroma.sqlite3
server/db/: chroma.py  mongo.py
server/docs/: AGENTS.md  ARCHITECTURE.md  README.md
server/models/: schemas.py
server/prompts/: __init__.py  editor.py  fact_checker.py  humanizer.py  memory_keeper.py  planner.py  researcher.py  self_healing.py  world_builder.py  writer.py
server/repository/: __init__.py  agent_runs.py  artifacts.py  assets.py  callbacks.py  chapters.py  characters.py  chat_messages.py  entities.py  logs.py  messages.py  project_memory.py  projects.py  settings.py
server/routers/: messages.py  projects.py  settings.py
server/scripts/: reindex.py
server/services/: __init__.py  llm_service.py
(+202 files in other folders)
