[project]
name = "bookish-server"
version = "0.1.0"
description = "Multi-agent book writing orchestrator API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi[standard]>=0.136.1",
    "langchain>=1.3.1",
    "langchain-anthropic>=1.4.6",
    "langchain-openai>=1.3.2",
    "langfuse>=4.6.1",
    "langgraph>=1.2.1",
    "langgraph-checkpoint-mongodb>=0.4.0",
    "langgraph-cli[inmem]>=0.4.30",
    "pymongo>=4.12,<4.17",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.47.0",
    "pyjwt>=2.9.0",
    "httpx>=0.27.0",
    "cryptography>=43.0.0",
    "svix>=1.24.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
